# Sensor_Fault_Detection

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Test.csv  credentials.md  dockerfile  env.yaml  main.py  pyproject.toml  requirements.txt  setup.py  template.py  test_main.py
.github/workflows/: ci.yml  main.yml
Sensor_Fault_Detetection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
artifact/12_21_2023_11_08_20/model_evaluation/: report.yaml
artifact/12_21_2023_11_17_33/model_evaluation/: report.yaml
artifact/12_21_2023_12_00_52/model_evaluation/: report.yaml
configs/: model.yaml  schema.yaml
docs/: architecture.md  data.md  reproducibility.md
sensor/: exception.py  logger.py
sensor/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_pusher.py  model_trainer.py
sensor/configuration/: mongo_db_connection.py
sensor/constant/: database.py  env_variable.py  s3_bucket.py
sensor/data_access/: sensor_data.py
sensor/entity/: artifact_entity.py  config_entity.py
sensor/ml/: __init__.py
sensor/ml/metric/: classification_metric.py
sensor/pipeline/: training_pipeline.py
sensor/utils/: main_utils.py
src/sensor_fault_detection/: __init__.py  api.py  cli.py  cloud.py  data.py  full_pipeline.py  model.py  monitoring.py  settings.py  sources.py
tests/: test_api.py  test_cli_e2e.py  test_cloud.py  test_data.py  test_full_pipeline.py  test_model.py  test_settings.py
tests/fixtures/: aps_synthetic.csv
workflow_design/: data_ingestion.md
(+46 files in other folders)
