[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sensor-fault-detection"
version = "1.0.0"
description = "Reproducible batch classification of APS component-related faults"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kripa Mishra" }]
license = { file = "LICENSE" }
dependencies = [
  "joblib>=1.3,<2",
  "numpy>=1.24,<3",
  "pandas>=2.0,<3",
  "PyYAML>=6.0,<7",
  "scikit-learn>=1.3,<2",
]

[project.optional-dependencies]
dev = [
  "build>=1.0,<2",
  "pytest>=7.4,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
sensor-fault-detection = "sensor_fault_detection.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
